--- a/HoheTauernTourismus/main.css
+++ b/HoheTauernTourismus/main.css
@@ -59,3 +59,15 @@ footer nav {
 #pulldown {
     margin-bottom: 0.3em;
 }
+
+.summary {
+    margin-bottom: 2em;
+}
+
+.summary-badge {
+    display: inline-block;
+    padding: 0.4em;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    margin-right: 0.5em;
+}
