--- a/HoheTauernTourismus/main.css
+++ b/HoheTauernTourismus/main.css
@@ -77,3 +77,9 @@ footer nav {
     border-radius: 10px;
     margin-right: 0.5em;
 }
+
+.github{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
