--- a/HoheTauernTourismus/main.css
+++ b/HoheTauernTourismus/main.css
@@ -11,7 +11,7 @@ a {
 }
 
 main {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: auto;
     text-align: justify;
 }
@@ -71,8 +71,8 @@ footer nav {
 }
 
 .buttons {
-    display: inline-block;
     color:rgb(255, 255, 255);
+    display: inline-block;
     padding: 0.4em;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
@@ -81,6 +81,25 @@ footer nav {
 
 .github{
     position: absolute;
-    right: 0;
+    display: inline-block;
+    right: 5em;
     top: 0;
+    margin-right: 0.5em;
+    padding: 0.4em;
+}
+
+.touren{
+    --ele-area: #28c8e9ba;
+      --ele-bg: white;
+}
+
+.backbutton{
+    position: absolute;
+    display: inline-block;
+    right: 5em;
+    color:rgb(255, 255, 255);
+    padding: 0.4em;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    margin-right: 0.5em;
 }
