--- a/HoheTauernTourismus/main.css
+++ b/HoheTauernTourismus/main.css
@@ -66,6 +66,7 @@ footer nav {
 
 .summary-badge {
     display: inline-block;
+    background-color:rgb(255, 255, 255);
     padding: 0.4em;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
